[gd_scene load_steps=9 format=3 uid="uid://b1nqawclvaxha"]

[ext_resource type="Script" path="res://Assets/Script/game_over_screen.gd" id="1_f1qhb"]
[ext_resource type="FontFile" uid="uid://c80ctkfp0xdeo" path="res://Assets/Art/Another Art/clacon2.woff2" id="1_m21xy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40lo3"]
bg_color = Color(0, 0.272, 0.51, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_yh2eq"]
font = ExtResource("1_m21xy")
font_size = 90
font_color = Color(0.560333, 0, 0.82, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_41egv"]
font = ExtResource("1_m21xy")
font_size = 55
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ou4dr"]
font = ExtResource("1_m21xy")
font_size = 50
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_jgkpw"]

[sub_resource type="CanvasTexture" id="CanvasTexture_0e2u6"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1qhb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0845133, 0.0252, 0.14, 0.490196)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.503
anchor_top = 0.395
anchor_right = 0.503
anchor_bottom = 0.395
offset_left = -236.62
offset_top = -179.2
offset_right = 232.38
offset_bottom = 288.8
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_40lo3")

[node name="GameOver" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.5
offset_top = 28.0
offset_right = 119.5
offset_bottom = 71.0
grow_horizontal = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_yh2eq")

[node name="HighScore" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.5
offset_top = 118.0
offset_right = 209.5
offset_bottom = 164.0
grow_horizontal = 2
text = "Hi-Score: 99999"
label_settings = SubResource("LabelSettings_41egv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.5
offset_top = 174.0
offset_right = 201.5
offset_bottom = 249.0
grow_horizontal = 2
text = "Score: 999"
label_settings = SubResource("LabelSettings_ou4dr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QUIT" type="Button" parent="Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = 126.0
offset_right = 121.5
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6531, 0.0924, 0.84, 1)
theme_override_fonts/font = ExtResource("1_m21xy")
theme_override_font_sizes/font_size = 55
text = "QUIT"

[node name="QUIT" type="TouchScreenButton" parent="Panel/QUIT"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(247, 73)
texture_normal = SubResource("CanvasTexture_jgkpw")
action = "quit"

[node name="Restart" type="Button" parent="Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = 36.0
offset_right = 121.5
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6531, 0.0924, 0.84, 1)
theme_override_fonts/font = ExtResource("1_m21xy")
theme_override_font_sizes/font_size = 55
text = "Retry"

[node name="Restart" type="TouchScreenButton" parent="Panel/Restart"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(246, 73)
texture_normal = SubResource("CanvasTexture_0e2u6")
action = "restart"

[connection signal="pressed" from="Panel/QUIT" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/QUIT/QUIT" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/Restart/Restart" to="." method="_on_restart_pressed"]
